// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Link ] should render Colors 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    />
  </a>
  <a
    class="link color-tertiary"
  >
    <p
      class="paragraph color-tertiary size-md weight-semibold is-inline"
    />
  </a>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Link ] should render Default 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    />
  </a>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Link ] should render Sizes 1`] = `
<DocumentFragment>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-xs weight-semibold is-inline"
    />
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-sm weight-semibold is-inline"
    />
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-md weight-semibold is-inline"
    />
  </a>
  <a
    class="link color-primary"
  >
    <p
      class="paragraph color-primary size-lg weight-semibold is-inline"
    />
  </a>
</DocumentFragment>
`;
